# notion-mcp

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt
.cursor/aisettings/: cursor.aisettings
docs/: implementation.md
examples/: client_example.py
notion_mcp/: server.py
notion_mcp/api/: client.py
notion_mcp/config/: settings.py
notion_mcp/mcp/: handler.py  models.py
notion_mcp/models/: notion.py
notion_mcp/utils/: notion.py
