[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notion-mcp"
version = "0.1.0"
description = "MCP Server for interacting with Notion"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Contributors", email = "example@example.com"}
]
dependencies = [
    "mcp>=1.6.0",
    "requests>=2.31.0",
    "anyio>=4.5.0",
    "pydantic>=2.5.0",
    "starlette>=0.31.0",
    "uvicorn>=0.23.0",
    "httpx>=0.27.0",
    "click>=8.1.0"
]

[project.optional-dependencies]
dev = [
    "black>=23.12.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "flake8>=6.1.0",
    "ruff>=0.1.0"
]

[tool.setuptools]
packages = ["notion_mcp"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true 